--- a/cssFiles/styleMob.css
+++ b/cssFiles/styleMob.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-@media screen and (min-width:320px) and (max-width:800px) {
-
-
-   * {
+@media screen and (min-width:320px) and (max-width:800px)  {
+    * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
@@ -23,31 +20,31 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 35.167vw;
-        border: 6.087vw solid #C4C4C4;
+        width: 80vw;
+        border: 0.3vw solid #C4C4C4;
         box-sizing: border-box;
-        border-radius: 0.868vw;
+        border-radius: 1.868vw;
     }
 
     .top {
         width: 100%;
-        height: 3vw;
+        height: 5vw;
         background: #FFDC40;
-        border-top-left-radius: 0.868vw;
-        border-top-right-radius: 0.868vw;
+        border-top-left-radius: 1.868vw;
+        border-top-right-radius: 1.868vw;
     }
 
     h1 {
-        width: 17.188vw;
-        height: 2.951vw;
-        margin-top: 1.128vw;
+        width: 30.188vw;
+        height: 10.951vw;
+        margin-top: 5.128vw;
         text-align: center;
-        font-size: 2.5vw;
+        font-size: 5.5vw;
     }
 
     .sort-photo {
-        margin-top: 2vw;
-        margin-bottom: 1vw;
+        margin-top: 0vw;
+        margin-bottom: 2vw;
         width: 80%;
         display: flex;
         justify-content: flex-end;
@@ -59,23 +56,23 @@
 
     .input-container,
     .listClass {
-        width: 24.826vw;
+        width: 65.826vw;
         border: 0.087vw solid #C4C4C4;
-        padding: 0.5vw;
+        padding: 1.5vw;
     }
 
     .input-container {
         display: flex;
         justify-content: space-between;
         padding: 0.5vw;
-        height: 3.472vw;
-        border-radius: 1vw 1vw 1vw 1vw;
+        height: 7.472vw;
+        border-radius: 2vw 2vw 2vw 2vw;
     }
 
     .listClass {
         display: none;
         border-bottom: none;
-        border-radius: 1vw 1vw 0 0;
+        border-radius: 2vw 2vw 0 0;
         list-style: none;
         max-height: 15vw;
         overflow: auto;
@@ -90,10 +87,10 @@
     }
 
     .button1 {
-        width: 3.646vw;
-        height: 3.646vw;
+        width: 5.646vw;
+        height: 5.646vw;
         background: #9953F1;
-        border-radius: 6.163vw;
+        border-radius: 50%;
         border: 0vw;
         color: white;
         display: flex;
@@ -102,8 +99,8 @@
     }
 
     .button2 {
-        width: 13.021vw;
-        height: 3.646vw;
+        width: 20.021vw;
+        height: 5.646vw;
         background: #833AE0;
         border-radius: 6.163vw;
         border: 0vw;
@@ -119,12 +116,12 @@
     }
 
     .del {
-        margin-top: 0.434vw;
+        margin-top: 1.434vw;
         background: none;
         border: none;
         outline: none;
-        width: 1.5vw;
-        height: 1.5vw;
+        width: 2.5vw;
+        height: 2.5vw;
         background-image: url("./photo/delBtn.svg");
         background-size: cover;
         background-repeat: no-repeat;
@@ -136,9 +133,9 @@
     }
 
     .buttons {
-        margin-top: 1.5vw;
-        margin-bottom: 1.5vw;
-        font-size: 1.215vw;
+        margin-top: 3vw;
+        margin-bottom: 3vw;
+        font-size: 3vw;
 
     }
 
@@ -151,12 +148,12 @@
     }
 
     .delete2 {
-        margin-top: 0.434vw;
+        margin-top: 1.434vw;
         background-image: url('/photo/delBtn.svg');
         background-size: cover;
         background-repeat: no-repeat;
-        width: 1.5vw;
-        height: 1.5vw;
+        width: 2.5vw;
+        height: 2.5vw;
         border: none;
         background-color: white;
         outline: none;
@@ -172,5 +169,6 @@
         line-height: 250%;
         display: flex;
         justify-content: space-between;
-    } 
+    }
+    
 }
