--- a/cssFiles/style.css
+++ b/cssFiles/style.css
@@ -125,13 +125,13 @@
         outline: none;
         width: 1.5vw;
         height: 1.5vw;
-        background-image: url("./photo/delBtn.svg");
+        background-image: url("/photo/delBtn.svg");
         background-size: cover;
         background-repeat: no-repeat;
     }
 
     .del:hover {
-        background-image: url("./photo/delBtn1.svg");
+        background-image: url("/photo/delBtn1.svg");
         cursor: pointer;
     }
 
