--- a/cssFiles/styleMob.css
+++ b/cssFiles/styleMob.css
@@ -128,13 +128,13 @@
         outline: none;
         width: 4vw;
         height: 4vw;
-        background-image: url("./photo/delBtn.svg");
+        background-image: url("/photo/delBtn.svg");
         background-size: cover;
         background-repeat: no-repeat;
     }
 
     .del:hover {
-        background-image: url("./photo/delBtn1.svg");
+        background-image: url("/photo/delBtn1.svg");
         cursor: pointer;
     }
 
